# $Id: CHANGELOG,v 1.104 2004/01/10 08:33:08 jaco Exp $

* Sat, Jan 10, 2003, 0.5.7-cvs
  + Buchan Milne <bgmilne@cae.co.za>:
    [halt.local]:
      - Added for custom commands to be executed at shutdown, eg.
        CD eject ('noeject' boot option disables CD eject)
    [linuxrc]:
      - Fix error on illegal attempt to unmount /initrd/cdrom upon
        system shutdown
      - Added hostname= boot option to set the hostname
    [mklivecd]:
      - Add support ('--extraisofiles' option) for adding
        additional files to the root of the LiveCD ISO image
        (ie to see when browsing the CD normally)
  + Jaco Greeff <jaco@linuxminicd.org>:
    [BOOTCODES]:
      - Added
    [FAQ]:
      - Point to the gif2lss program in the boot splash section
      - Show how to override Makefile parameters
    [README]:
      - Updated to point to the new LiveCD home of mklivecd,
        http://developer.berlios.de/projects/livecd/ with the
        correct mailing list info
    [Modules.mk]:
      - Remove AIC7xxx_old module (hangs Adaptec cards with
        AIC7xxx loaded already)
      - Cooker kernels >= 2.4.23-0.rc5.2mdk (9.2+) renamed SCSI
        module: sym53c8xx.o -> sym53c8xx_2.o (Handle both)
      - Fix path of zlib_inflate.o module to work with kernels
        actually providing it
      - Added loop.o and aes.o (dep. for loop) to be able to mount
        files (such as squashfs files) with the "-o loop" option
      - Removed hardcoded module extension, .o, 2.6 has .ko
      - Tweaked modules, two trees now (one for 2.4, one for 2.6)
      - Added USB modules for USB device boots
    [Rules.mk]:
      - Created list for default normal and SCSI modules
      - Created listing for optional modules
      - Split modules into Modules.mk
      - Force date calculation to LC_ALL=C locale for decent CVS
        spec generation
      - Moved splash values here to allow single-place edits
    [hwdetect]:
      - PS/2 mice should now work in wheel and non-wheel modes.